# WASM-Rust-JNI

./: Cargo.toml  README.md  build.rs
examples/Rust-MC/: Cargo.toml  README.md  wasi_snapshot_preview1.reactor.wasm
examples/Rust-MC/src/: api.rs  lib.rs
examples/Rust-MC/src/bindings/: events.rs  mod.rs
protobuf/: core.proto  player.proto  plugin.proto  sync.proto  universe.proto
src/: api.rs  event.rs  lib.rs  plugin.rs  universe.rs
src/bindings/: commands.rs  level.rs  logger.rs  mod.rs  player.rs  universe.proto
src/registry/: block.rs  mod.rs
wit/: api.wit  api28.wit
