[package]
name = "WASM-JNI"
version = "0.1.0"
edition = "2024"

[lib]
name = "wasmjni"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasmtime = { version = "43.0.0", features = ["component-model"] }
jni = "0.22"
anyhow = "1.0.102"
wasmtime-wasi = "43.0.0"
once_cell = "1.21.4"
prost = "0.14"
slotmap = "1.1"
zip = "8.4"

[build-dependencies]
prost-build = "0.14"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
